# krita-clonestamp

./: .gitignore  README.md
Tool-plugin/: KisToolCloneStamp.cpp  KisToolCloneStamp.h  kritatoolclonestamp.json
docs/: CLAUDE.md  change-report-2026-07-18.md  phase-a-runbook.md  toolchain-paths.md
native-brush-preview-patch/: NOTE.md
native-plugin-patch/: CMakeLists.txt  ClonestampToolPlugin.cpp  ClonestampToolPlugin.h  KisToolCloneStamp.cpp  KisToolCloneStamp.h  NOTE.md
python-plugin/: clonestamp_docker.py
python-plugin/clonestamp/: __init__.py  clonestamp_core.py  clonestamp_docker.py  clonestamp_extension.py  clonestamp_update.py  kritapykrita_clonestamp.desktop
